--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,15 +27,36 @@ dist.dir=dist
 dist.jar=${dist.dir}/pratica-I-SI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.antlr-2.7.7.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\antlr-2.7.7.jar
+file.reference.byte-buddy-1.8.17.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\byte-buddy-1.8.17.jar
+file.reference.classmate-1.3.4.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\classmate-1.3.4.jar
+file.reference.dom4j-1.6.1.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-5.0.4.Final.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\hibernate-commons-annotations-5.0.4.Final.jar
+file.reference.hibernate-core-5.3.6.Final.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\hibernate-core-5.3.6.Final.jar
+file.reference.jandex-2.0.5.Final.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\jandex-2.0.5.Final.jar
+file.reference.javassist-3.23.1-GA.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\javassist-3.23.1-GA.jar
+file.reference.javax.activation-api-1.2.0.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\javax.activation-api-1.2.0.jar
+file.reference.javax.persistence-api-2.2.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\javax.persistence-api-2.2.jar
+file.reference.jboss-logging-3.3.2.Final.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\jboss-logging-3.3.2.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\jboss-transaction-api_1.2_spec-1.1.1.Final.jar
 file.reference.postgresql-9.4.1209.jar=../../../Program Files/NetBeans 8.2/ide/modules/ext/postgresql-9.4.1209.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${libs.hibernate4-persistence.classpath}:\
-    ${libs.hibernate4-support.classpath}:\
     ${file.reference.postgresql-9.4.1209.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.byte-buddy-1.8.17.jar}:\
+    ${file.reference.classmate-1.3.4.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.4.Final.jar}:\
+    ${file.reference.hibernate-core-5.3.6.Final.jar}:\
+    ${file.reference.jandex-2.0.5.Final.jar}:\
+    ${file.reference.javassist-3.23.1-GA.jar}:\
+    ${file.reference.javax.activation-api-1.2.0.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.jboss-logging-3.3.2.Final.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
