--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
-annotation.processing.enabled=true
+annotation.processing.enabled=false
 annotation.processing.enabled.in.editor=false
 annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=pratica-I-SI
+application.vendor=lukin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/pratica-I-SI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.7.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\antlr-2.7.7.jar
 file.reference.byte-buddy-1.8.17.jar=D:\\Downloads\\hibernate-release-5.3.6.Final\\lib\\required\\byte-buddy-1.8.17.jar
